--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "strict": true,
     "target": "es5",
     "newLine": "lf",
-    "declaration": true
+    "declaration": true,
+    "noImplicitAny": false,
+    "allowJs": true
   },
   "include": ["*/src/*.ts"]
 }
