--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Operational Transformation adapter for CodeMirror 6.",
   "main": "./dist/codemirror-ot.js",
+  "types": "dist/codemirror-ot.d.ts",
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "test": "mocha -r ts-node/register test/*"
