Update license field in package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "Text"
   ],
   "author": "Curran Kelleher",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/datavis-tech/codemirror-ot/issues"
   },
