--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.3.0",
   "description": "Operational Transformation adapter for CodeMirror 6.",
   "main": "dist/codemirror-ot.js",
-  "types": "dist/codemirror-ot.d.ts",
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "test": "mocha -r ts-node/register test/*",
+    "test": "mocha -r esm test/*",
     "prepublishOnly": "npm run build && npm run test",
     "postpublish": "git push && git push --tags"
   },
@@ -30,14 +29,11 @@
     "@datavis-tech/codemirror-6-prerelease": "1"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.5",
+    "esm": "^3.0.84",
     "mocha": "^5.2.0",
     "ot-json0": "^1.1.0",
     "rollup": "^0.66.6",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-typescript2": "^0.17.2",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
+    "rollup-plugin-node-resolve": "^3.4.0"
   }
 }
