--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0",
   "description": "Operational Transformation adapter for CodeMirror 6.",
   "main": "dist/codemirror-ot.js",
+  "module": "src/index.js",
   "scripts": {
     "prettier": "prettier --single-quote {*.js,**/*.js} --write",
     "lint": "eslint .",
