--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
     "diff-match-patch": "^1.0.5"
   },
   "devDependencies": {
-    "@codemirror/view": "^0.20.3",
-    "eslint": "^8.14.0",
+    "@codemirror/view": "^0.20.4",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "eslint": "^8.15.0",
     "jsdom": "^19.0.0",
     "json0-ot-diff": "^1.1.2",
-    "mocha": "^9.2.2",
+    "mocha": "^10.0.0",
     "ot-json0": "^1.1.0",
     "ot-json1": "^1.0.2",
     "ot-text-unicode": "^4.0.0",
     "prettier": "^2.6.2",
-    "rollup": "^2.70.2",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "sharedb": "^2.2.5"
+    "rollup": "^2.72.1",
+    "sharedb": "^3.0.0"
   }
 }
